# demo-toddgpt

./: .gitignore  README.md  main.py  old-main.py  pyproject.toml  run_uvicorn.sh
frontend/: package-lock.json  package.json
frontend/cypress/e2e/: app.cy.js
frontend/cypress/integration/: app_spec.js
frontend/public/: index.html
frontend/src/: App.css  App.js
public/: index.html
public/spectra/: logo.base64
src/: index.js
src/toddgpt/: core.py  main.py  prompt.py
src/toddgpt/parsers/: parse_hhtda.py  parse_wpbe.py
src/toddgpt/tools/: chemcloud_tool.py  datatypes.py  experimental_data.py  frontend_tools.py  grab_geom.py  mace_calc.py  search_lit.py  spectra.py  update_tc_input.py  visualizations.py
src/toddgpt/tools/example_inputs/: frequency  tddft-wpbe
src/toddgpt/tools/example_inputs/hhtda/: tc_input
src/toddgpt/tools/example_inputs/minimize/: tc_input
src/toddgpt/tools/wigner/: atom_data.py  manage_xyz.py  units.py  wigner.out  wigner.py
tests/: test_chemcloud_tool.py  test_experimental_data.py  test_frontend_tools.py  test_search_lit.py  test_spectra.py
