[project]
name = "demo-toddgpt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ase>=3.23.0",
    "isort>=5.13.2",
    "langchain>=0.3.0",
    "langchain-core>=0.3.1",
    "langchain-openai>=0.2.0",
    "mypy>=1.11.2",
    "openai>=1.46.0",
    "pre-commit>=3.8.0",
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.5",
    "types-requests>=2.32.0.20240914",
    "mace-torch>=0.3.6",
    "paper-qa>=5.0.4",
    "langchain-community>=0.3.0",
    "chemcloud>=0.12.1",
    "qcio>=0.11.9",
    "qcop>=0.9.1",
    "qcparse>=0.6.3",
    "nest-asyncio>=1.6.0",
]

[tool.uv]
dev-dependencies = []

[tool.uv.sources]

